WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239889
[macOS] Non-unified build fixes
https://bugs.webkit.org/show_bug.cgi?id=239889
Summary
[macOS] Non-unified build fixes
Diego Pino
Reported
2022-04-28 22:50:44 PDT
[macOS] Non-unified build fixes
Attachments
Patch
(3.50 KB, patch)
2022-04-28 22:51 PDT
,
Diego Pino
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2022-04-28 22:51:17 PDT
Created
attachment 458572
[details]
Patch
EWS
Comment 2
2022-04-29 01:00:54 PDT
Committed
r293610
(
250116@main
): <
https://commits.webkit.org/250116@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458572
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-29 01:01:12 PDT
<
rdar://problem/92511753
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug