[macOS] Unreviewed, non-unified build fixes https://bugs.webkit.org/show_bug.cgi?id=239889

* UIProcess/API/Cocoa/_WKDataTask.h:
* UIProcess/API/Cocoa/_WKDataTask.mm:
* UIProcess/API/Cocoa/_WKInspectorConfigurationInternal.h:
* UIProcess/Cocoa/ModalContainerControlClassifier.h:
* UIProcess/Cocoa/ModalContainerControlClassifier.mm:

Canonical link: https://commits.webkit.org/250116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293610 268f45cc-cd09-0410-ab3c-d52691b4dbfc