Source/WebKit/UIProcess/Cocoa/ModalContainerControlClassifier.h
@@ -26,6 +26,7 @@
 #pragma once
 
 #import <wtf/Forward.h>
+#include <wtf/WorkQueue.h>
 
 @class MLModel;
 
